# self.project

./: pyproject.toml  setup.py
pkmodel/: __init__.py  model.py  protocol.py  solution.py
