[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PKMODEL"
version = "1.0"
description = "2 compartment subcut and IV bolus PK model."
readme = "README.md"
license = {file = "LICENSE"}
maintainers = [{name = "Sanaz Kazeminia", email = "sanaz.kazeminia@dtc.ox.ac.uk"}]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy"
]
[project.optional-dependencies]
docs = [
    "sphinx>=1.5, !=1.7.3",
    "sphinx_rtd_theme"
]
dev = [
"flake8>=3"
]